Fixed Phone spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -620,7 +620,7 @@ pre code {
     background-position: center;
   }
   #tester{
-    width:150%;
+    width:100%;
   }
 }
 @media (min-width: 1200px) {
